[gd_scene load_steps=7 format=3 uid="uid://yijynhnkiy7o"]

[ext_resource type="Texture2D" uid="uid://cm55samgxjyk8" path="res://img/img_salle_coffres/fonds/fond trappe.png" id="1_1tyyq"]
[ext_resource type="Script" path="res://trappe_background.gd" id="2_1pw5b"]
[ext_resource type="Texture2D" uid="uid://co453qel170io" path="res://img/img_salle_coffres/boutons/écusson.png" id="3_q4t24"]
[ext_resource type="Texture2D" uid="uid://cs1v5gbct3804" path="res://img/img_salle_coffres/boutons/cadenas fermé.png" id="4_ynhf6"]
[ext_resource type="Texture2D" uid="uid://bqneigvbhcmov" path="res://img/img_salle_coffres/boutons/cadena ouvert.png" id="5_cd4fm"]
[ext_resource type="Texture2D" uid="uid://btarbhdiauqqe" path="res://img/img_salle_coffres/boutons/feu vert.png" id="6_hyeat"]

[node name="trappe_background" type="Sprite2D"]
position = Vector2(573, 325)
texture = ExtResource("1_1tyyq")
script = ExtResource("2_1pw5b")

[node name="retour_button" type="Button" parent="."]
offset_left = -37.0
offset_top = -314.0
offset_right = 471.0
offset_bottom = 194.0
scale = Vector2(0.15, 0.15)
icon = ExtResource("3_q4t24")

[node name="code1" type="LineEdit" parent="."]
offset_left = 288.0
offset_top = -248.0
offset_right = 510.0
offset_bottom = -171.0
theme_override_font_sizes/font_size = 50

[node name="code2" type="LineEdit" parent="."]
offset_left = 288.0
offset_top = -160.0
offset_right = 510.0
offset_bottom = -83.0
theme_override_font_sizes/font_size = 50

[node name="code3" type="LineEdit" parent="."]
offset_left = 288.0
offset_top = -70.0
offset_right = 510.0
offset_bottom = 7.0
theme_override_font_sizes/font_size = 50

[node name="code4" type="LineEdit" parent="."]
offset_left = 288.0
offset_top = 21.0
offset_right = 510.0
offset_bottom = 98.0
theme_override_font_sizes/font_size = 50

[node name="code5" type="LineEdit" parent="."]
offset_left = 288.0
offset_top = 109.0
offset_right = 510.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 50

[node name="code_or" type="LineEdit" parent="."]
offset_left = -481.0
offset_top = -222.0
offset_right = -381.0
offset_bottom = -145.0
theme_override_font_sizes/font_size = 25

[node name="code_argent" type="LineEdit" parent="."]
offset_left = -481.0
offset_top = -36.0
offset_right = -386.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 25

[node name="code_bronze" type="LineEdit" parent="."]
offset_left = -481.0
offset_top = 148.0
offset_right = -386.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 25

[node name="cadena_ferme" type="Sprite2D" parent="."]
position = Vector2(2, 28)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_ynhf6")

[node name="cadena_ouvert" type="Button" parent="."]
offset_left = -49.0
offset_top = -22.0
offset_right = 459.0
offset_bottom = 486.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("5_cd4fm")

[node name="commentaires" type="Label" parent="."]
offset_left = -147.0
offset_top = -116.0
offset_right = 192.0
offset_bottom = -45.0
theme_override_colors/font_color = Color(0.556863, 0.258824, 0.227451, 1)
theme_override_font_sizes/font_size = 24
text = "Remplis les cases et faire
'Entrer' pour ouvrir la trappe"

[node name="feu_vert_codes" type="Sprite2D" parent="."]
position = Vector2(404, 223)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_hyeat")

[node name="feu_vert_medaille_or" type="Sprite2D" parent="."]
position = Vector2(-319, -184)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_hyeat")

[node name="feu_vert_medaille_argent" type="Sprite2D" parent="."]
position = Vector2(-321, 3)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_hyeat")

[node name="feu_vert_medaille_bronze" type="Sprite2D" parent="."]
position = Vector2(-325, 186)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_hyeat")

[connection signal="all_codes_bons" from="." to="." method="_on_all_codes_bons"]
[connection signal="all_medailles_bons" from="." to="." method="_on_all_medailles_bons"]
[connection signal="feu_vert_argent" from="." to="." method="_on_feu_vert_argent"]
[connection signal="feu_vert_bronze" from="." to="." method="_on_feu_vert_bronze"]
[connection signal="feu_vert_or" from="." to="." method="_on_feu_vert_or"]
[connection signal="trappe_ouverte" from="." to="." method="_on_trappe_ouverte"]
[connection signal="pressed" from="retour_button" to="." method="_on_retour_button_pressed"]
[connection signal="focus_entered" from="code1" to="." method="_on_code_1_focus_entered"]
[connection signal="text_changed" from="code1" to="." method="_on_code_1_text_changed"]
[connection signal="text_submitted" from="code1" to="." method="_on_code_1_text_submitted"]
[connection signal="focus_entered" from="code2" to="." method="_on_code_2_focus_entered"]
[connection signal="text_changed" from="code2" to="." method="_on_code_2_text_changed"]
[connection signal="text_submitted" from="code2" to="." method="_on_code_2_text_submitted"]
[connection signal="focus_entered" from="code3" to="." method="_on_code_3_focus_entered"]
[connection signal="text_changed" from="code3" to="." method="_on_code_3_text_changed"]
[connection signal="text_submitted" from="code3" to="." method="_on_code_3_text_submitted"]
[connection signal="focus_entered" from="code4" to="." method="_on_code_4_focus_entered"]
[connection signal="text_changed" from="code4" to="." method="_on_code_4_text_changed"]
[connection signal="text_submitted" from="code4" to="." method="_on_code_4_text_submitted"]
[connection signal="focus_entered" from="code5" to="." method="_on_code_5_focus_entered"]
[connection signal="text_changed" from="code5" to="." method="_on_code_5_text_changed"]
[connection signal="text_submitted" from="code5" to="." method="_on_code_5_text_submitted"]
[connection signal="focus_entered" from="code_or" to="." method="_on_code_or_focus_entered"]
[connection signal="text_changed" from="code_or" to="." method="_on_code_or_text_changed"]
[connection signal="text_submitted" from="code_or" to="." method="_on_code_or_text_submitted"]
[connection signal="focus_entered" from="code_argent" to="." method="_on_code_argent_focus_entered"]
[connection signal="text_changed" from="code_argent" to="." method="_on_code_argent_text_changed"]
[connection signal="text_submitted" from="code_argent" to="." method="_on_code_argent_text_submitted"]
[connection signal="focus_entered" from="code_bronze" to="." method="_on_code_bronze_focus_entered"]
[connection signal="text_changed" from="code_bronze" to="." method="_on_code_bronze_text_changed"]
[connection signal="text_submitted" from="code_bronze" to="." method="_on_code_bronze_text_submitted"]
[connection signal="pressed" from="cadena_ouvert" to="." method="_on_cadena_ouvert_pressed"]
